# deckOfCards

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  cards.h  cards.hpp  main.cpp
test/: CMakeLists.txt  test_dealCard.cpp  test_getCurCardNum.cpp
